# works-with-agents

./: .gitignore  AGENTS.md  DEPLOY.md  README.md  blue-ocean-products.md  companies-house-draft.md  deploy.sh  market-validation.md  module-1-what-are-agents.md
.co.uk/: 404.html  AGENTS.md  _redirects  index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml
.com/: 404.html  AGENTS.md  about.html  agent-osi-model.md  contact.html  index.html  learn.html  llms-full.txt  llms.txt  newsletter.html  robots.txt  sitemap.xml  standards.html
.com/api/: newsletter-handler.py
.com/blog/: 001-ai-agent-standards.html  index.html
.com/blueprints/: index.html
.com/learn/: boot.html  memory.html  (+8 more)
.dev/: AGENTS.md  Dockerfile  decisions.md  llms-full.txt  llms.txt  openapi.json  wrangler.toml
.io/: Dockerfile  llms.txt
docs/: COURSE-OUTLINE.md  LAUNCH-PACKAGE.md  bastion-weekend.md
engine/: __init__.py  flow_compiler.py  main.py  process_parser.py  process_spec.py  template_library.py  validator.py
methodology/: 01-boot-youtube.md  01-boot.md  02-skills-youtube.md  02-skills.md  03-memory-youtube.md  03-memory.md  04-decision-protocols-youtube.md  04-decision-protocols.md  05-tool-composition-youtube.md  05-tool-composition.md  06-orchestration-youtube.md  06-orchestration.md  07-pipelines-youtube.md  07-pipelines.md  08-resilience-youtube.md  08-resilience.md  09-verify-youtube.md  09-verify.md  10-compounding-youtube.md  10-compounding.md  README.md
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs  vanilla_agent.rs
tools/: api-auditor.py
website/: index.html
(+90 files in other folders)
